--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@auth0/nextjs-auth0": "0.16.0",
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
     "clsx": "1.1.1",
+    "isomorphic-unfetch": "3.1.0",
     "next": "10.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
